manifests/feedback.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-feedback
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sa-feedback
    spec:
      containers:
      - image: kevinedwards/sentiment-analysis-feedback:v1.0.0
        imagePullPolicy: Always
        name: sa-feedback
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: 64Mi
            cpu: 250m
          limits:
            memory: 128Mi
            cpu: 500m
        volumeMounts:
        - name: sqlite-volume
          mountPath: /usr/database
      volumes:
      - name: sqlite-volume
        persistentVolumeClaim:
          claimName: sqlite-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sa-feedback
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sa-feedback
