manifests/sa-frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-frontend
  labels:
    app: sa-frontend
spec:
  selector:
    matchLabels:
      app: sa-frontend
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sa-frontend
    spec:
      containers:
        # - image: kevinedwards/sentiment-analysis-frontend:v1.0.0
        # - image: kevinedwards/sentiment-analysis-frontend:v1.0.0-green
        # - image: kevinedwards/sentiment-analysis-frontend:minikube-white
        - image: kevinedwards/sentiment-analysis-frontend:minikube-green
          imagePullPolicy: Always
          name: sa-frontend
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 150m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sa-frontend-lb
  labels:
    app: sa-frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: sa-frontend
  # type: NodePort
