manifests/sa-web-app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-web-app
  labels:
    app: sa-web-app
spec:
  selector:
    matchLabels:
      app: sa-web-app
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sa-web-app
    spec:
      containers:
        - image: kevinedwards/sentiment-analysis-web-app:v1.0.0
          imagePullPolicy: Always
          name: sa-web-app
          ports:
            - containerPort: 8080
          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 128Mi
          #   limits:
          #     cpu: 150m
          #     memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sa-web-app-lb
  labels:
    app: sa-web-app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 31929
  selector:
    app: sa-web-app
  type: NodePort
