manifests/ingress.yml
# https://kubernetes.github.io/ingress-nginx/deploy/#minikube
# minikube addons enable ingress
#
# https://kubernetes.github.io/ingress-nginx/deploy/#aws
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.5.1/deploy/static/provider/aws/deploy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-ingress-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sa-frontend-lb
                port:
                  number: 80
          - path: /sentiment
            pathType: Prefix
            backend:
              service:
                name: sa-web-app-lb
                port:
                  number: 80
